# smartbook

./: .env.example  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_PLAN.md  OAUTH_SETUP.md  PROGRESS.md  README.md  SECURITY_AUDIT.md  alembic.ini  docker-compose.yml  generate_secrets.sh  main.py  pyproject.toml  start.sh
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 874b7b402569_initial_migration.py  abc123def456_add_multi_user_authentication.py
frontend/: .env.example  README.md  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/apps/admin/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/apps/guest/: index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/docker/: Dockerfile.admin  Dockerfile.guest
frontend/docker/nginx/: admin.conf  guest.conf
scripts/: update_admin_endpoints.py
src/smartbook/: __init__.py  config.py  main.py
src/smartbook/api/: __init__.py  dependencies.py
src/smartbook/domain/: __init__.py  database.py  enums.py
src/smartbook/integrations/: __init__.py  ros1000_service.py  ros1000_xml_builder.py
src/smartbook/repositories/: __init__.py  base.py  booking.py  compliance_record.py  guest.py  tax_rule.py  tenant.py  user.py  user_property_assignment.py
tests/: __init__.py  conftest.py
tests/e2e/: test_complete_workflows.py
tests/integration/: test_api_endpoints.py
tests/unit/: test_ros1000_integration.py  test_schemas.py  test_services.py  test_tax_calculation.py  test_tax_reporting.py
(+82 files in other folders)
